[package]
name = "include-sql"
description = "A Yesql inspired macro for using SQL in Rust"
version = "0.3.2"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
edition = "2018"
rust-version = "1.88"
license = "MIT"
keywords = ["database","sql","macro"]
categories = ["database"]
repository = "https://github.com/quietboil/include-sql"
homepage = "https://quietboil.github.io/include-sql"

[lib]
proc-macro = true

[dependencies]
syn         = "2.0"
proc-macro2 = "1.0"
quote       = "1.0"
once_cell   = "1.21"
regex       = "1.11"

[features]
async = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]