[package]
name = "include-postgres-sql"
description = "A Yesql inspired macro for using PostgreSQL SQL in Rust" 
version = "0.1.0"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["database","sql","macro"]
categories = ["database"]
repository = "https://github.com/quietboil/include-sql"
homepage = "https://github.com/quietboil/include-sql" 

[dependencies]
postgres = "0.19"
include-sql = { path = "../main", version = "0.2" }
