[package]
name = "include-sqlite-sql"
description = "A Yesql inspired macro for using SQLite SQL in Rust"
version = "0.1.1"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["database","sql","macro","sqlite"]
categories = ["database"]
repository = "https://github.com/quietboil/include-sql"
homepage = "https://github.com/quietboil/include-sql"

[dependencies]
rusqlite = "0.26"
include-sql = { path = "../main", version = "0.2" }

[dev-dependencies]
# SQLite 3.35.0 or later is needed to execute `delete_genre`
# that uses RETURNING in the chinook example.
# Ubuntu LTS uses 3.31, hence "bundled"
rusqlite = { version = "0.26", features = ["bundled"] }
