[package]
name = "include-sql"
version = "0.1.0"
edition = "2018"
description = "A macro for using SQL in Rust."
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
license = "MIT"
keywords = ["database","sql","macro"]
categories = ["database"]
repository = "https://github.com/quietboil/include-sql"
homepage = "https://github.com/quietboil/include-sql"
readme = "README.md"

[dependencies]
syn                = { version = "0.15", features = ["full"] }
proc-macro2        = "0.4"
quote              = "0.6"
lazy_static        = "1.3"
regex              = "1.1"
include-sql-helper = { version = "0.1", path = "../helper" }

[dev-dependencies]
rusqlite     = "0.17"
postgres     = "0.15"
oci_rs       = "0.8"
oracle       = "0.2"
string-error = "0.1"

[lib]
proc-macro = true
